update index.js file

--- a/_data/logiciels_libres-open_source_software/airBnb-Knowledge-Repo.yml
+++ b/_data/logiciels_libres-open_source_software/airBnb-Knowledge-Repo.yml
@@ -13,8 +13,8 @@ licenses:
       fr: "https://github.com/airbnb/knowledge-repo/blob/master/LICENSE"
     spdxID: "Apache-2.0"
 name:
-  en: AirBnb Knowledge Repo
-  fr: AirBnb Knowledge Repo
+  en: AirBnb-knowledge-repo
+  fr: AirBnb-knowledge-repo
 tags:
   en:
     - "Sharing knowledge"
