--- a/_data/logiciels_libres-open_source_software/notepad-plus-plus.yml
+++ b/_data/logiciels_libres-open_source_software/notepad-plus-plus.yml
@@ -13,8 +13,8 @@ licenses:
       fr: "https://notepad-plus-plus.org/news/notepad-6.1.1-gpl-enhancement.html"
     spdxID: "GPL-2.0"
 name:
-  en: Notepad++
-  fr: Notepad++
+  en: Notepad-plus-plus
+  fr: Notepad-plus-plus
 tags:
   en:
     - Desktop
