--- a/_data/forms/config-code.yml
+++ b/_data/forms/config-code.yml
@@ -5,9 +5,13 @@ id: code
 formGroups:
   - preset: schemaVersion
   - preset: adminCode
+  - preset: selectCode
+  - preset: description
   - preset: contact
   - preset: dates
-  - preset: description
+    created: true
+    modified: true
+    metadata: true
   - widget: string-i18n
     title: DownloadUrl
     type: url
@@ -17,9 +21,6 @@ formGroups:
     type: url
     required: false
   - preset: languages
-  - widget: string-i18n
-    title: ProjectName
-    rule: alphanum-space
   - widget: string-i18n
     title: Organization
     rule: alphanum-space
