--- a/_data/forms/config-code.yml
+++ b/_data/forms/config-code.yml
@@ -5,6 +5,17 @@ id: code
 formGroups:
   - preset: schemaVersion
   - preset: adminCode
+  - preset: newAdmin
+    fields:
+      - preset: orgLevel
+      - widget: string
+        title: newAdminCode
+      - widget: select
+        title: ProvinceCode
+        options: [ab, bc, mb, nb, nl, nt, ns, nu, "on", pe, qc, sk, yt] # on is a yaml/liquid/jekyll keyword and thus must be escaped
+      - widget: string-i18n
+        title: Name
+        rule: alphanum-space
   - preset: selectCode
   - preset: description
   - preset: contact
