🤖 Committed by basssam.ajam95@gmail.com

--- a/_data/administrations/municipal.yml
+++ b/_data/administrations/municipal.yml
@@ -1,18 +1,20 @@
----
 - code: mtl_qc
-  provinceCode: "qc"
+  provinceCode: qc
   name:
     en: City of Montreal
     fr: Ville de Montréal
-
 - code: ottawa_on
-  provinceCode: "on"
+  provinceCode: 'on'
   name:
     en: City of Ottawa
     fr: Ville d'Ottawa
-
 - code: edmonton_ab
-  provinceCode: "ab"
+  provinceCode: ab
   name:
     en: City of Edmonton
     fr: Ville d'Edmonton
+- code: test
+  provinceCode: 'on'
+  name:
+    en: set
+    fr: test
