🤖 Committed by test@gmail.com

--- a/_data/logiciels_libres-open_source_software/docker.yml
+++ b/_data/logiciels_libres-open_source_software/docker.yml
@@ -1,58 +1,76 @@
---- 
-schemaVersion: "1.0"
-description: 
-  en: "Performs operating-system-level virtualization also known as containerization"
-  fr: "Effectue une virtualisation au niveau du système d'exploitation, également appelée conteneurisation"
+schemaVersion: '1.0'
+description:
+  en: Performs operating-system-level virtualization also known as containerization
+  fr: 'Effectue une virtualisation au niveau du système d''exploitation, également appelée conteneurisation'
 homepageURL:
-  en: "https://www.docker.com"
-  fr: "https://www.docker.com"
-licenses: 
-  - 
-    URL: 
-      en: "https://www.docker.com/legal/components-licenses"
-      fr: "https://www.docker.com/legal/components-licenses"
-    spdxID: "Apache-2.0"
-name: 
-  en: "Docker"
-  fr: "Docker"
-tags: 
+  en: 'https://www.docker.com'
+  fr: 'https://www.docker.com'
+licenses:
+  - URL:
+      en: 'https://www.docker.com/legal/components-licenses'
+      fr: 'https://www.docker.com/legal/components-licenses'
+    spdxID: Apache-2.0
+name:
+  en: Docker
+  fr: Docker
+tags:
   en:
-    - "Container platform"
+    - Container platform
     - Development
     - Infrastructure
-  fr: 
-    - "Plate-forme de conteneur"
+  fr:
+    - Plate-forme de conteneur
     - Développement
     - Infrastructure
-admininstrations: 
-  - 
-    adminCode: statcan
-    uses: 
-      - 
-        contact: 
-          email: "michael.goit@canada.ca"
-        date: 
-          started: "2019-05-06"
-          metadataLastUpdated: "2019-05-13"
-        name: 
-          en: "Development and deployment"
-          fr: "Développements et Déploiements"
-        description: 
-          en: "Development and deployment process"
-          fr: "Processus de développements et déploiements"
-  
-  - 
-    adminCode: tbs-sct
-    uses: 
-      - 
-        contact: 
-          email: "ilia.salem@tbs-sct.gc.ca"
-        date: 
-          started: "2019-05-06"
-          metadataLastUpdated: "2019-05-13"
-        name: 
-          en: "Development and deployment"
-          fr: "Développements et Déploiements"
-        description: 
-          en: "Digital Collaboration Division development and deployment"
-          fr: "Développement et déploiement de la Division de la collaboration numérique"
+administrations:
+  - adminCode: statcan
+    uses:
+      - contact:
+          email: michael.goit@canada.ca
+        date:
+          started: '2019-05-06'
+          metadataLastUpdated: '2019-05-13'
+        name:
+          en: Development and deployment
+          fr: Développements et Déploiements
+        description:
+          en: Development and deployment process
+          fr: Processus de développements et déploiements
+  - adminCode: tbs-sct
+    uses:
+      - contact:
+          email: ilia.salem@tbs-sct.gc.ca
+        date:
+          started: '2019-05-06'
+          metadataLastUpdated: '2019-05-13'
+        name:
+          en: Development and deployment
+          fr: Développements et Déploiements
+        description:
+          en: Digital Collaboration Division development and deployment
+          fr: Développement et déploiement de la Division de la collaboration numérique
+  - adminCode: lac-bac
+    uses:
+      - contact:
+          email: test@gmail.com
+          URL:
+            en: 'http://test.com'
+            fr: 'http://test.com'
+          name: test
+        date:
+          started: '2019-06-11'
+          metadataLastUpdated: '2019-06-25'
+        description:
+          en: test
+          fr: test
+        name:
+          en: test
+          fr: test
+        relatedCode:
+          - URL:
+              en: 'http://test.com'
+              fr: 'http://test.com'
+            name:
+              en: test
+              fr: test
+        status: Beta
