--- a/_data/logiciels_libres-open_source_software/mediawiki.yml
+++ b/_data/logiciels_libres-open_source_software/mediawiki.yml
@@ -1,27 +1,27 @@
 ---
-schemaVersion: "1.0"
+schemaVersion: '1.0'
 description:
-  en: "Wiki package written in PHP, originally for use on Wikipedia"
-  fr: "Ensemble Wiki développé à l’origine pour Wikipédia"
+  en: Wiki package written in PHP, originally for use on Wikipedia
+  fr: Ensemble Wiki développé à l’origine pour Wikipédia
 homepageURL:
-  en: "https://www.mediawiki.org/wiki/MediaWiki"
-  fr: "https://www.mediawiki.org/wiki/MediaWiki/fr"
+  en: https://www.mediawiki.org/wiki/MediaWiki
+  fr: https://www.mediawiki.org/wiki/MediaWiki/fr
 licenses:
   -
     URL:
-      en: "https://www.mediawiki.org/wiki/Topic:Tg9b5hes4ue3vdix"
-      fr: "https://www.mediawiki.org/wiki/Topic:Tg9b5hes4ue3vdix"
-    spdxID: "GPL-2.0"
+      en: https://www.mediawiki.org/wiki/Topic:Tg9b5hes4ue3vdix
+      fr: https://www.mediawiki.org/wiki/Topic:Tg9b5hes4ue3vdix
+    spdxID: GPL-2.0
 name:
   en: MediaWiki
   fr: MediaWiki
 tags:
   en:
-    - "Wiki"
-    - "Web site"
+    - Wiki
+    - Web site
   fr:
-    - "Wiki"
-    - "Site web"
+    - Wiki
+    - Site web
 administrations:
   -
     adminCode: tbs-sct
@@ -29,30 +29,30 @@ administrations:
       -
         contact:
           URL:
-            en: "https://github.com/gctools-outilsgc/gcpedia/issues"
-            fr: "https://github.com/gctools-outilsgc/gcpedia/issues"
-          email: "ilia.salem@tbs-sct.gc.ca"
+            en: https://github.com/gctools-outilsgc/gcpedia/issues
+            fr: https://github.com/gctools-outilsgc/gcpedia/issues
+          email: ilia.salem@tbs-sct.gc.ca
         date:
-          started: 2019-05-06
-          metadataLastUpdated: 2019-05-16
+          started: '2019-05-06'
+          metadataLastUpdated: '2019-05-16'
         name:
-          en: "GCpedia"
-          fr: "GCpedia"
+          en: GCpedia
+          fr: GCpedia
         description:
-          en: "Internal Government of Canada Wiki"
-          fr: "Wiki interne du gouvernement du Canada"
+          en: Internal Government of Canada Wiki
+          fr: Wiki interne du gouvernement du Canada
       -
         contact:
           URL:
-            en: "https://github.com/gctools-outilsgc/gcpedia/issues"
-            fr: "https://github.com/gctools-outilsgc/gcpedia/issues"
-          email: "ilia.salem@tbs-sct.gc.ca"
+            en: https://github.com/gctools-outilsgc/gcpedia/issues
+            fr: https://github.com/gctools-outilsgc/gcpedia/issues
+          email: ilia.salem@tbs-sct.gc.ca
         date:
-          started: 2019-05-06
-          metadataLastUpdated: 2019-05-16
+          started: '2019-05-06'
+          metadataLastUpdated: '2019-05-16'
         name:
-          en: "GCcollab Wiki"
-          fr: "Wiki GCcollab"
+          en: GCcollab Wiki
+          fr: Wiki GCcollab
         description:
-          en: "External Government of Canada Wiki"
-          fr: "Wiki externe du gouvernement du Canada"
+          en: External Government of Canada Wiki
+          fr: Wiki externe du gouvernement du Canada
