--- a/_data/logiciels_libres-open_source_software/airBnb-Knowledge-Repo.yml
+++ b/_data/logiciels_libres-open_source_software/airBnb-Knowledge-Repo.yml
@@ -1,38 +1,38 @@
 ---
-schemaVersion: "1.0"
+schemaVersion: '1.0'
 description:
-  en: "A platform for data scientists and other technical professions."
-  fr: "Une plateforme pour les scientifiques de données et d'autres professions techniques."
+  en: A platform for data scientists and other technical professions.
+  fr: Une plateforme pour les scientifiques de données et d'autres professions techniques.
 homepageURL:
-  en: "https://airbnb.io/projects/knowledge-repo/"
-  fr: "https://airbnb.io/projects/knowledge-repo/"
+  en: https://airbnb.io/projects/knowledge-repo/
+  fr: https://airbnb.io/projects/knowledge-repo/
 licenses:
   -
     URL:
-      en: "https://github.com/airbnb/knowledge-repo/blob/master/LICENSE"
-      fr: "https://github.com/airbnb/knowledge-repo/blob/master/LICENSE"
-    spdxID: "Apache-2.0"
+      en: https://github.com/airbnb/knowledge-repo/blob/master/LICENSE
+      fr: https://github.com/airbnb/knowledge-repo/blob/master/LICENSE
+    spdxID: Apache-2.0
 name:
   en: AirBnb-knowledge-repo
   fr: AirBnb-knowledge-repo
 tags:
   en:
-    - "Sharing knowledge"
+    - Sharing knowledge
   fr:
-    - "Partage des connaissances"
+    - Partage des connaissances
 administrations:
   -
     adminCode: mtl_qc
     uses:
       -
         contact:
-          email: "libre@ville.montreal.qc.ca"
+          email: libre@ville.montreal.qc.ca
         date:
-          started: 2019-01-31
-          metadataLastUpdated: 2019-05-06
+          started: '2019-01-31'
+          metadataLastUpdated: '2019-05-06'
         description:
-          en: "Business Intelligence."
-          fr: "Intelligence d'affaires."
+          en: Business Intelligence.
+          fr: Intelligence d'affaires.
         name:
-          en: "Document Management Software."
-          fr: "Logiciels de gestion documentaire."
+          en: Document Management Software.
+          fr: Logiciels de gestion documentaire.
