--- a/_data/logiciels_libres-open_source_software/airFlow.yml
+++ b/_data/logiciels_libres-open_source_software/airFlow.yml
@@ -1,38 +1,38 @@
 --- 
-schemaVersion: "1.0"
+schemaVersion: '1.0'
 description:
-  en: "Airflow is a platform to programmatically author, schedule and monitor workflows."
-  fr: "~"
+  en: Airflow is a platform to programmatically author, schedule and monitor workflows.
+  fr: Airflow est une plate-forme permettant de créer, planifier et surveiller par programme des flux de travail.
 homepageURL:
-  en: "https://airflow.apache.org/"
-  fr: "https://airflow.apache.org/"
+  en: https://airflow.apache.org/
+  fr: https://airflow.apache.org/
 licenses:
   -
     URL:
-      en: "https://github.com/apache/airflow/blob/master/LICENSE"
-      fr: "https://github.com/apache/airflow/blob/master/LICENSE"
-    spdxID: "Apache-2.0"
+      en: https://github.com/apache/airflow/blob/master/LICENSE
+      fr: https://github.com/apache/airflow/blob/master/LICENSE
+    spdxID: Apache-2.0
 name:
   en: AirFlow
   fr: AirFlow
 tags:
   en:
-    - "Data integration"
+    - Data integration
   fr:
-    - "Intégration de données"
+    - Intégration de données
 administrations:
   -
     adminCode: mtl_qc
     uses:
       -
         contact:
-          email: "libre@ville.montreal.qc.ca"
+          email: libre@ville.montreal.qc.ca
         date:
-          started: 2017-06-30
-          metadataLastUpdated: 2019-05-06
+          started: '2017-06-30'
+          metadataLastUpdated: '2019-05-06'
         description:
-          en: "Business Intelligence."
-          fr: "Intelligence d'affaires."
+          en: Business Intelligence.
+          fr: Intelligence d'affaires.
         name:
-          en: "Content flow management software."
-          fr: "Logiciels de gestion de flux de contenus."
+          en: Content flow management software.
+          fr: Logiciels de gestion de flux de contenus.
