--- a/_data/logiciels_libres-open_source_software/ansible.yml
+++ b/_data/logiciels_libres-open_source_software/ansible.yml
@@ -1,38 +1,38 @@
 ---
-schemaVersion: "1.0"
+schemaVersion: '1.0'
 description:
-  en: "Ansible is an IT automation tool."
-  fr: "Ansible est un outil d'automatisation informatique."
+  en: Ansible is an IT automation tool.
+  fr: Ansible est un outil d'automatisation informatique.
 homepageURL:
-  en: "https://www.ansible.com/"
-  fr: "https://www.ansible.com/"
+  en: https://www.ansible.com/
+  fr: https://www.ansible.com/
 licenses:
   -
     URL:
-      en: "https://github.com/ansible/ansible/blob/devel/COPYING"
-      fr: "https://github.com/ansible/ansible/blob/devel/COPYING"
-    spdxID: "GPL-3.0"
+      en: https://github.com/ansible/ansible/blob/devel/COPYING
+      fr: https://github.com/ansible/ansible/blob/devel/COPYING
+    spdxID: GPL-3.0
 name:
   en: Ansible
   fr: Ansible
 tags:
   en:
-    - "Application platform"
+    - Application platform
   fr:
-    - "Plateforme applicative"
+    - Plateforme applicative
 administrations:
   -
     adminCode: mtl_qc
     uses:
       -
         contact:
-          email: "libre@ville.montreal.qc.ca"
+          email: libre@ville.montreal.qc.ca
         date:
-          started: 2017-06-30
-          metadataLastUpdated: 2019-05-06
+          started: '2017-06-30'
+          metadataLastUpdated: '2019-05-06'
         description:
-          en: "Application Management."
-          fr: "Gestion applicative."
+          en: Application Management.
+          fr: Gestion applicative.
         name:
-          en: "Application Server Software."
-          fr: "Logiciels serveur d'applications."
+          en: Application Server Software.
+          fr: Logiciels serveur d'applications.
