--- a/_data/logiciels_libres-open_source_software/bokeh.yml
+++ b/_data/logiciels_libres-open_source_software/bokeh.yml
@@ -1,38 +1,38 @@
 ---
-schemaVersion: "1.0"
+schemaVersion: '1.0'
 description:
-  en: "Bokeh is an interactive visualization library that targets modern web browsers for presentation."
-  fr: "Bokeh est une bibliothèque de visualisation interactive qui cible les navigateurs Web modernes à des fins de présentation."
+  en: Bokeh is an interactive visualization library that targets modern web browsers for presentation.
+  fr: Bokeh est une bibliothèque de visualisation interactive qui cible les navigateurs Web modernes à des fins de présentation.
 homepageURL:
-  en: "http://bokeh.pydata.org/en/latest/"
-  fr: "http://bokeh.pydata.org/en/latest/"
+  en: http://bokeh.pydata.org/en/latest/
+  fr: http://bokeh.pydata.org/en/latest/
 licenses:
   -
     URL:
-      en: "https://github.com/bokeh/bokeh/blob/master/LICENSE.txt"
-      fr: "https://github.com/bokeh/bokeh/blob/master/LICENSE.txt"
-    spdxID: "BSD 3-Clause"
+      en: https://github.com/bokeh/bokeh/blob/master/LICENSE.txt
+      fr: https://github.com/bokeh/bokeh/blob/master/LICENSE.txt
+    spdxID: BSD 3-Clause
 name:
   en: Bokeh
   fr: Bokeh
 tags:
   en:
-    - "Visualisation"
+    - Visualisation
   fr:
-    - "Visualisation"
+    - Visualisation
 administrations:
   -
     adminCode: mtl_qc
     uses:
       -
         contact:
-          email: "libre@ville.montreal.qc.ca"
+          email: libre@ville.montreal.qc.ca
         date:
-          started: 2017-06-30
-          metadataLastUpdated: 2019-05-06
+          started: '2017-06-30'
+          metadataLastUpdated: '2019-05-06'
         description:
-          en: "Business Intelligence."
-          fr: "Intelligence d'affaires."
+          en: Business Intelligence.
+          fr: Intelligence d'affaires.
         name:
-          en: "Imaging software or graphics software."
-          fr: "Logiciels d'imagerie ou logiciels graphiques."
+          en: Imaging software or graphics software.
+          fr: Logiciels d'imagerie ou logiciels graphiques.
