--- a/_data/logiciels_libres-open_source_software/cassandra.yml
+++ b/_data/logiciels_libres-open_source_software/cassandra.yml
@@ -1,38 +1,38 @@
 ---
-schemaVersion: "1.0"
+schemaVersion: '1.0'
 description:
-  en: "Apache Cassandra is a highly-scalable partitioned row store."
-  fr: "~"
+  en: Apache Cassandra is a highly-scalable partitioned row store.
+  fr: Apache Cassandra est une base de données partitionnée hautement évolutif.
 homepageURL:
-  en: "http://cassandra.apache.org/"
-  fr: "http://cassandra.apache.org/"
+  en: http://cassandra.apache.org/
+  fr: http://cassandra.apache.org/
 licenses:
   -
     URL:
-      en: "https://github.com/apache/cassandra/blob/trunk/LICENSE.txt"
-      fr: "https://github.com/apache/cassandra/blob/trunk/LICENSE.txt"
-    spdxID: "Apache-2.0"
+      en: https://github.com/apache/cassandra/blob/trunk/LICENSE.txt
+      fr: https://github.com/apache/cassandra/blob/trunk/LICENSE.txt
+    spdxID: Apache-2.0
 name:
   en: Cassandra
   fr: Cassandra
 tags:
   en:
-    - "Data base"
+    - Data base
   fr:
-    - "Base de données"
+    - Base de données
 administrations:
   -
     adminCode: mtl_qc
     uses:
       -
         contact:
-          email: "libre@ville.montreal.qc.ca"
+          email: libre@ville.montreal.qc.ca
         date:
-          started: 2019-01-31
-          metadataLastUpdated: 2019-05-10
+          started: '2019-01-31'
+          metadataLastUpdated: '2019-05-10'
         description:
-          en: "Data managment."
-          fr: "Gestion des données."
+          en: Data managment.
+          fr: Gestion des données.
         name:
-          en: "Software Database Management Systems."
-          fr: "Logiciels de systèmes de gestion de base de données."
+          en: Software Database Management Systems.
+          fr: Logiciels de systèmes de gestion de base de données.
