--- a/_data/logiciels_libres-open_source_software/debezium.yml
+++ b/_data/logiciels_libres-open_source_software/debezium.yml
@@ -1,38 +1,38 @@
 ---
-schemaVersion: "1.0"
+schemaVersion: '1.0'
 description:
-  en: "Debezium is an open source distributed platform for change data capture."
-  fr: "Debezium est une platforme distribuée d'une ressource ouverte pour la capture de données modifiées."
+  en: Debezium is an open source distributed platform for change data capture.
+  fr: Debezium est une platforme distribuée d'une ressource ouverte pour la capture de données modifiées.
 homepageURL:
-  en: "https://debezium.io/"
-  fr: "https://debezium.io/"
+  en: https://debezium.io/
+  fr: https://debezium.io/
 licenses:
   -
     URL:
-      en: "https://github.com/debezium/debezium/blob/master/LICENSE.txt"
-      fr: "https://github.com/debezium/debezium/blob/master/LICENSE.txt"
-    spdxID: "Apache-2.0"
+      en: https://github.com/debezium/debezium/blob/master/LICENSE.txt
+      fr: https://github.com/debezium/debezium/blob/master/LICENSE.txt
+    spdxID: Apache-2.0
 name:
   en: Debezium
   fr: Debezium
 tags:
   en:
-    - "Incremental management of data"
+    - Incremental management of data
   fr:
-    - "Gestion incrementale des données"
+    - Gestion incrementale des données
 administrations:
   -
     adminCode: mtl_qc
     uses:
       -
         contact:
-          email: "libre@ville.montreal.qc.ca"
+          email: libre@ville.montreal.qc.ca
         date:
-          started: 2017-06-30
-          metadataLastUpdated: 2019-05-10
+          started: '2017-06-30'
+          metadataLastUpdated: '2019-05-10'
         description:
-          en: "Data managment."
-          fr: "Gestion des données."
+          en: Data managment.
+          fr: Gestion des données.
         name:
-          en: "Software Database Management Systems."
-          fr: "Logiciels de systèmes de gestion de base de données."
+          en: Software Database Management Systems.
+          fr: Logiciels de systèmes de gestion de base de données.
