--- a/_data/logiciels_libres-open_source_software/docker.yml
+++ b/_data/logiciels_libres-open_source_software/docker.yml
@@ -1,27 +1,27 @@
 ---
-schemaVersion: "1.0"
+schemaVersion: '1.0'
 description:
-  en: "Performs operating-system-level virtualization also known as containerization"
-  fr: "Effectue une virtualisation au niveau du système d'exploitation, également appelée conteneurisation"
+  en: Performs operating-system-level virtualization also known as containerization
+  fr: Effectue une virtualisation au niveau du système d'exploitation, également appelée conteneurisation
 homepageURL:
-  en: "https://www.docker.com"
-  fr: "https://www.docker.com"
+  en: https://www.docker.com
+  fr: https://www.docker.com
 licenses:
   -
     URL:
-      en: "https://www.docker.com/legal/components-licenses"
-      fr: "https://www.docker.com/legal/components-licenses"
-    spdxID: "Apache-2.0"
+      en: https://www.docker.com/legal/components-licenses
+      fr: https://www.docker.com/legal/components-licenses
+    spdxID: Apache-2.0
 name:
-  en: "Docker"
-  fr: "Docker"
+  en: Docker
+  fr: Docker
 tags:
   en:
-    - "Container platform"
+    - Container platform
     - Development
     - Infrastructure
   fr:
-    - "Plate-forme de conteneur"
+    - Plate-forme de conteneur
     - Développement
     - Infrastructure
 administrations:
@@ -30,28 +30,28 @@ administrations:
     uses:
       -
         contact:
-          email: "michael.goit@canada.ca"
+          email: michael.goit@canada.ca
         date:
-          started: 2019-05-06
-          metadataLastUpdated: 2019-05-13
+          started: '2019-05-06'
+          metadataLastUpdated: '2019-05-13'
         name:
-          en: "Development and deployment"
-          fr: "Développements et Déploiements"
+          en: Development and deployment
+          fr: Développements et Déploiements
         description:
-          en: "Development and deployment process"
-          fr: "Processus de développements et déploiements"
+          en: Development and deployment process
+          fr: Processus de développements et déploiements
   -
     adminCode: tbs-sct
     uses:
       -
         contact:
-          email: "ilia.salem@tbs-sct.gc.ca"
+          email: ilia.salem@tbs-sct.gc.ca
         date:
-          started: 2019-05-06
-          metadataLastUpdated: 2019-05-13
+          started: '2019-05-06'
+          metadataLastUpdated: '2019-05-13'
         name:
-          en: "Development and deployment"
-          fr: "Développements et Déploiements"
+          en: Development and deployment
+          fr: Développements et Déploiements
         description:
-          en: "Digital Collaboration Division development and deployment"
-          fr: "Développement et déploiement de la Division de la collaboration numérique"
+          en: Digital Collaboration Division development and deployment
+          fr: Développement et déploiement de la Division de la collaboration numérique
