--- a/_data/logiciels_libres-open_source_software/drupal.yml
+++ b/_data/logiciels_libres-open_source_software/drupal.yml
@@ -1,25 +1,25 @@
 ---
-schemaVersion: "1.0"
+schemaVersion: '1.0'
 description:
-  en: "Content management system (CMS) written in PHP. Drupal provides a back-end framework for web sites."
-  fr: "Système de gestion de contenu (CMS) écrit en PHP. Drupal fournis une plateforme back-end pour des sites Web."
+  en: Content management system (CMS) written in PHP. Drupal provides a back-end framework for web sites.
+  fr: Système de gestion de contenu (CMS) écrit en PHP. Drupal fournis une plateforme back-end pour des sites Web.
 homepageURL:
-  en: "https://www.drupal.org"
-  fr: "https://www.drupal.org"
+  en: https://www.drupal.org
+  fr: https://www.drupal.org
 licenses:
   -
     URL:
-      en: "https://www.drupal.org/about/licensing#drupal-license"
-      fr: "https://www.drupal.org/about/licensing#drupal-license"
-    spdxID: "GPL-2.0"
+      en: https://www.drupal.org/about/licensing#drupal-license
+      fr: https://www.drupal.org/about/licensing#drupal-license
+    spdxID: GPL-2.0
 name:
   en: Drupal
   fr: Drupal
 tags:
   en:
-    - "Web site"
+    - Web site
   fr:
-    - "Site web"
+    - Site web
 administrations:
   -
     adminCode: cse-cst
@@ -28,14 +28,14 @@ administrations:
         contact:
           email: webmaster@cse-cst.gc.ca
         date:
-          started: 2019-05-06
-          metadataLastUpdated: 2019-05-13
+          started: '2019-05-06'
+          metadataLastUpdated: '2019-05-13'
         name:
-          en: "CSE Website"
-          fr: "Site Web du CST"
+          en: CSE Website
+          fr: Site Web du CST
         description:
-          en: "CST Website Creation"
-          fr: "Création de site Web du CST"
+          en: CST Website Creation
+          fr: Création de site Web du CST
         users:
           - public
   -
@@ -44,26 +44,26 @@ administrations:
       -
         contact:
           URL:
-            en: "https://github.com/canada-ca/ore-ero/issues"
-            fr: "https://github.com/canada-ca/ore-ero/issues"
+            en: https://github.com/canada-ca/ore-ero/issues
+            fr: https://github.com/canada-ca/ore-ero/issues
           email: christopher.jaja@tbs-sct.gc.ca
-          name: "Christopher Jaja"
+          name: Christopher Jaja
         date:
-          started: 2018-01-23
-          metadataLastUpdated: 2019-05-06
+          started: '2018-01-23'
+          metadataLastUpdated: '2019-05-06'
         name:
-          en: "Open Government Portal"
-          fr: "Portail du Gouvernement ouvert"
+          en: Open Government Portal
+          fr: Portail du Gouvernement ouvert
         description:
-          en: "Drupal 8 install profile for open.canada.ca"
-          fr: "Profil d'installation de Drupal 8 pour open.canada.ca"
+          en: Drupal 8 install profile for open.canada.ca
+          fr: Profil d'installation de Drupal 8 pour open.canada.ca
         relatedCode:
           URL:
-            en: "https://github.com/open-data/od"
-            fr: "https://github.com/open-data/od"
+            en: https://github.com/open-data/od
+            fr: https://github.com/open-data/od
           name:
-            en: "open data"
-            fr: "données ouvertes"
+            en: open data
+            fr: données ouvertes
         users:
           - public
   -
@@ -71,14 +71,14 @@ administrations:
     uses:
       -
         contact:
-          name: "Irina Krasteleva"
-          email: "irina.krasteleva@tc.gc.ca"
+          name: Irina Krasteleva
+          email: irina.krasteleva@tc.gc.ca
         date:
-          started: 2019-05-06
-          metadataLastUpdated: 2019-05-13
+          started: '2019-05-06'
+          metadataLastUpdated: '2019-05-13'
         name:
-          en: "Development Environment"
-          fr: "Environnement de développement"
+          en: Development Environment
+          fr: Environnement de développement
         description:
-          en: "APM data"
-          fr: "Données du APM"
+          en: APM data
+          fr: Données du APM
