--- a/_data/logiciels_libres-open_source_software/elgg.yml
+++ b/_data/logiciels_libres-open_source_software/elgg.yml
@@ -1,32 +1,32 @@
 ---
-schemaVersion: "1.0"
+schemaVersion: '1.0'
 description:
-  en: "Highly customizable web framework and CMS for building social apps"
-  fr: "Framework Web hautement personnalisable et CMS pour créer des applications sociales"
+  en: Highly customizable web framework and CMS for building social apps
+  fr: Framework Web hautement personnalisable et CMS pour créer des applications sociales
 homepageURL:
-  en: "https://elgg.org/"
-  fr: "https://elgg.org/"
+  en: https://elgg.org/
+  fr: https://elgg.org/
 licenses:
   -
     URL:
-      en: "http://learn.elgg.org/en/2.0/intro/license.html"
-      fr: "http://learn.elgg.org/en/2.0/intro/license.html"
-    spdxID: "MIT"
+      en: http://learn.elgg.org/en/2.0/intro/license.html
+      fr: http://learn.elgg.org/en/2.0/intro/license.html
+    spdxID: MIT
   -
     URL:
-      en: "http://learn.elgg.org/en/2.0/intro/license.html"
-      fr: "http://learn.elgg.org/en/2.0/intro/license.html"
-    spdxID: "GPL-2.0"
+      en: http://learn.elgg.org/en/2.0/intro/license.html
+      fr: http://learn.elgg.org/en/2.0/intro/license.html
+    spdxID: GPL-2.0
 name:
   en: Elgg
   fr: Elgg
 tags:
   en:
-    - "Collaboration"
-    - "Social"
+    - Collaboration
+    - Social
   fr:
-    - "Collaboration"
-    - "Sociale"
+    - Collaboration
+    - Sociale
 administrations:
   -
     adminCode: tbs-sct
@@ -34,30 +34,30 @@ administrations:
       -
         contact:
           URL:
-            en: "https://github.com/gctools-outilsgc/gcconnex/issues"
-            fr: "https://github.com/gctools-outilsgc/gcconnex/issues"
-          email: "ilia.salem@tbs-sct.gc.ca"
+            en: https://github.com/gctools-outilsgc/gcconnex/issues
+            fr: https://github.com/gctools-outilsgc/gcconnex/issues
+          email: ilia.salem@tbs-sct.gc.ca
         date:
-          started: 2019-05-06
-          metadataLastUpdated: 2019-05-13
+          started: '2019-05-06'
+          metadataLastUpdated: '2019-05-13'
         name:
-          en: "GCcollab"
-          fr: "GCcollab"
+          en: GCcollab
+          fr: GCcollab
         description:
-          en: "External social networking platform hosted by the Government of Canada"
-          fr: "Plateforme de réseautage social externe hébergée par le gouvernement du Canada"
+          en: External social networking platform hosted by the Government of Canada
+          fr: Plateforme de réseautage social externe hébergée par le gouvernement du Canada
       -
         contact:
           URL:
-          en: "https://github.com/gctools-outilsgc/gcconnex/issues"
-          fr: "https://github.com/gctools-outilsgc/gcconnex/issues"
-          email: "ilia.salem@tbs-sct.gc.ca"
+          en: https://github.com/gctools-outilsgc/gcconnex/issues
+          fr: https://github.com/gctools-outilsgc/gcconnex/issues
+          email: ilia.salem@tbs-sct.gc.ca
         date:
-          started: 2019-05-06
-          metadataLastUpdated: 2019-05-13
+          started: '2019-05-06'
+          metadataLastUpdated: '2019-05-13'
         name:
-          en: "GCconnex"
-          fr: "GCconnex"
+          en: GCconnex
+          fr: GCconnex
         description:
-          en: "Internal social networking platform for the Government of Canada"
-          fr: "Plateforme de réseautage social interne pour le gouvernement du Canada"
+          en: Internal social networking platform for the Government of Canada
+          fr: Plateforme de réseautage social interne pour le gouvernement du Canada
