--- a/_data/logiciels_libres-open_source_software/etherpad.yml
+++ b/_data/logiciels_libres-open_source_software/etherpad.yml
@@ -1,28 +1,28 @@
 ---
-schemaVersion: "1.0"
+schemaVersion: '1.0'
 description:
-  en: "Edit text documents collaboratively in real-time"
-  fr: "Collaboration en temps réel sur des documents textes"
+  en: Edit text documents collaboratively in real-time
+  fr: Collaboration en temps réel sur des documents textes
 homepageURL:
-  en: "http://etherpad.org/"
-  fr: "http://etherpad.org/"
+  en: http://etherpad.org/
+  fr: http://etherpad.org/
 licenses:
   -
     URL:
-      en: "https://github.com/ether/etherpad-lite/blob/develop/LICENSE"
-      fr: "https://github.com/ether/etherpad-lite/blob/develop/LICENSE"
-    spdxID: "Apache-2.0"
+      en: https://github.com/ether/etherpad-lite/blob/develop/LICENSE
+      fr: https://github.com/ether/etherpad-lite/blob/develop/LICENSE
+    spdxID: Apache-2.0
 name:
-  en: "Etherpad"
-  fr: "Etherpad"
+  en: Etherpad
+  fr: Etherpad
 tags:
   en:
     - Collaboration
-    - "Text editor"
+    - Text editor
     - Productivity
   fr:
     - Collaboration
-    - "Éditeur texte"
+    - Éditeur texte
     - Productivité
 administrations:
   -
@@ -30,13 +30,13 @@ administrations:
     uses:
       -
         contact:
-          email: "mark.wooff@tbs-sct.gc.ca"
+          email: mark.wooff@tbs-sct.gc.ca
         date:
-          started: 2019-05-06
-          metadataLastUpdated: 2019-05-13
+          started: '2019-05-06'
+          metadataLastUpdated: '2019-05-13'
         name:
-          en: "GCcollab Docs"
-          fr: "Docs GCcollab"
+          en: GCcollab Docs
+          fr: Docs GCcollab
         description:
-          en: "Integrated with GCcollab"
-          fr: "Intégré avec GCcollab"
+          en: Integrated with GCcollab
+          fr: Intégré avec GCcollab
