--- a/_data/logiciels_libres-open_source_software/firefox.yml
+++ b/_data/logiciels_libres-open_source_software/firefox.yml
@@ -1,28 +1,28 @@
 ---
-schemaVersion: "1.0"
+schemaVersion: '1.0'
 description:
-  en: "Web browser developed by Mozilla Foundation"
-  fr: "Navigateur Web développé par la Fondation Mozilla"
+  en: Web browser developed by Mozilla Foundation
+  fr: Navigateur Web développé par la Fondation Mozilla
 homepageURL:
-  en: "https://www.mozilla.org/en-US/firefox/"
-  fr: "https://www.mozilla.org/fr/firefox/"
+  en: https://www.mozilla.org/en-US/firefox/
+  fr: https://www.mozilla.org/fr/firefox/
 licenses:
   -
     URL:
-      en: "https://www.mozilla.org/en-US/MPL/2.0/FAQ/"
-      fr: "https://www.mozilla.org/en-US/MPL/2.0/FAQ/"
-    spdxID: "MPL-2.0"
+      en: https://www.mozilla.org/en-US/MPL/2.0/FAQ/
+      fr: https://www.mozilla.org/en-US/MPL/2.0/FAQ/
+    spdxID: MPL-2.0
 name:
   en: Firefox
   fr: Firefox
 tags:
   en:
-    - "Web browser"
+    - Web browser
     - Desktop
     - Mobile
   fr:
-    - "Navigateur Web"
-    - "Poste de travail"
+    - Navigateur Web
+    - Poste de travail
     - Mobile
 administrations:
   -
@@ -30,13 +30,13 @@ administrations:
     uses:
       -
         contact:
-          email: "sebastien.lemay@canada.ca"
+          email: sebastien.lemay@canada.ca
         date:
-          started: 2019-05-06
-          metadataLastUpdated: 2019-05-13
+          started: '2019-05-06'
+          metadataLastUpdated: '2019-05-13'
         name:
-          en: "Available to all employees (self service)"
-          fr: "Disponible pour tous les employés (libre service)"
+          en: Available to all employees (self service)
+          fr: Disponible pour tous les employés (libre service)
         description:
-          en: "Upgraded to latest ESR version every month."
-          fr: "Mises à jours mensuelles à la dernière version ESR."
+          en: Upgraded to latest ESR version every month.
+          fr: Mises à jours mensuelles à la dernière version ESR.
