--- a/_data/logiciels_libres-open_source_software/laravel.yml
+++ b/_data/logiciels_libres-open_source_software/laravel.yml
@@ -1,26 +1,26 @@
 ---
-schemaVersion: "1.0"
+schemaVersion: '1.0'
 description:
-  en: "PHP web framework intended for the development of web applications following the model–view–controller (MVC) architectural pattern."
-  fr: "Framework Web PHP destiné au développement d'applications Web suivant le modèle architectural MVC modèle-vue-contrôleur."
+  en: PHP web framework intended for the development of web applications following the model–view–controller (MVC) architectural pattern.
+  fr: Framework Web PHP destiné au développement d'applications Web suivant le modèle architectural MVC modèle-vue-contrôleur.
 homepageURL:
-  en: "https://laravel.com"
-  fr: "https://laravel.com"
+  en: https://laravel.com
+  fr: https://laravel.com
 licenses:
   -
     URL:
-      en: "https://github.com/laravel/framework/blob/5.8/LICENSE.md"
-      fr: "https://github.com/laravel/framework/blob/5.8/LICENSE.md"
-    spdxID: "MIT"
+      en: https://github.com/laravel/framework/blob/5.8/LICENSE.md
+      fr: https://github.com/laravel/framework/blob/5.8/LICENSE.md
+    spdxID: MIT
 name:
   en: Laravel
   fr: Laravel
 tags:
   en:
-    - "HTTP Server"
+    - HTTP Server
     - PHP
   fr:
-    - "Serveur HTTP"
+    - Serveur HTTP
     - PHP
 administrations:
   -
@@ -29,15 +29,15 @@ administrations:
       -
         contact:
           URL:
-          en: "https://www.international.gc.ca"
-          fr: "https://www.international.gc.ca"
+          en: https://www.international.gc.ca
+          fr: https://www.international.gc.ca
           email: sebastien.routier@international.gc.ca
         date:
-          started: 2019-05-06
-          metadataLastUpdated: 2019-05-15
+          started: '2019-05-06'
+          metadataLastUpdated: '2019-05-15'
         name:
-          en: "Misc"
-          fr: "Divers"
+          en: Misc
+          fr: Divers
         description:
-          en: "Used to server many Web sites."
-          fr: "Utilisé pour servir plusieur site Web."
+          en: Used to server many Web sites.
+          fr: Utilisé pour servir plusieur site Web.
