--- a/_data/logiciels_libres-open_source_software/notepad-plus-plus.yml
+++ b/_data/logiciels_libres-open_source_software/notepad-plus-plus.yml
@@ -1,17 +1,17 @@
 ---
-schemaVersion: "1.0"
+schemaVersion: '1.0'
 description:
-  en: "Text editor and Notepad replacement that runs in the Windows environment."
-  fr: "Éditeur de textes et remplacement pour Notepad qui fonctionne dans l'environement Windows."
+  en: Text editor and Notepad replacement that runs in the Windows environment.
+  fr: Éditeur de textes et remplacement pour Notepad qui fonctionne dans l'environement Windows.
 homepageURL:
-  en: "https://notepad-plus-plus.org"
-  fr: "https://notepad-plus-plus.org/fr"
+  en: https://notepad-plus-plus.org
+  fr: https://notepad-plus-plus.org/fr
 licenses:
   -
     URL:
-      en: "https://notepad-plus-plus.org/news/notepad-6.1.1-gpl-enhancement.html"
-      fr: "https://notepad-plus-plus.org/news/notepad-6.1.1-gpl-enhancement.html"
-    spdxID: "GPL-2.0"
+      en: https://notepad-plus-plus.org/news/notepad-6.1.1-gpl-enhancement.html
+      fr: https://notepad-plus-plus.org/news/notepad-6.1.1-gpl-enhancement.html
+    spdxID: GPL-2.0
 name:
   en: Notepad-plus-plus
   fr: Notepad-plus-plus
@@ -19,11 +19,11 @@ tags:
   en:
     - Desktop
     - Productivity
-    - "Text editor"
+    - Text editor
   fr:
-    - "Poste de travail"
+    - Poste de travail
     - Productivité
-    - "Éditeur texte"
+    - Éditeur texte
 administrations:
   -
     adminCode: gac-amc
@@ -31,15 +31,15 @@ administrations:
       -
         contact:
           URL:
-            en: "https://www.international.gc.ca/"
-            fr: "https://www.international.gc.ca/"
+            en: https://www.international.gc.ca/
+            fr: https://www.international.gc.ca/
           email: sebastien.routier@international.gc.ca
         date:
-          started: 2019-05-06
-          metadataLastUpdated: 2019-05-16
+          started: '2019-05-06'
+          metadataLastUpdated: '2019-05-16'
         name:
-          en: "Available to all employees"
-          fr: "Disponible pour tous les employés"
+          en: Available to all employees
+          fr: Disponible pour tous les employés
         description:
-          en: "Must be requeted from the AppStore."
-          fr: "Disponible au AppStore."
+          en: Must be requeted from the AppStore.
+          fr: Disponible au AppStore.
