--- a/_data/forms/config-admin.yml
+++ b/_data/forms/config-admin.yml
@@ -7,8 +7,8 @@ formGroups:
   - widget: string
     title: newAdminCode
   - widget: select
-    title: ProvinceCode
+    title: provinceCode
     options: [ab, bc, mb, nb, nl, nt, ns, nu, "on", pe, qc, sk, yt] # on is a yaml/liquid/jekyll keyword and thus must be escaped
   - widget: string-i18n
-    title: Name
+    title: name
     rule: alphanum-space
