--- a/_data/forms/config-code.yml
+++ b/_data/forms/config-code.yml
@@ -6,57 +6,50 @@ formGroups:
   - preset: schemaVersion
   - preset: adminCode
   - preset: selectCode
+  - preset: empty
+    start: true
+    title: releases
   - preset: description
   - preset: contact
   - preset: dates
     created: true
     modified: true
+    updated: true
   - widget: string-i18n
-    title: DownloadUrl
+    title: downloadUrl
     type: url
     required: false
-  - widget: string-i18n
-    title: HomepageUrl
-    type: url
-    required: false
+  - preset: homepageUrl
   - preset: languages
   - widget: string-i18n
-    title: Organization
+    title: organization
     rule: alphanum-space
     required: false
   - widget: group
-    title: Partner
+    title: partner
     required: false
     fields:
       - widget: string-i18n
-        title: Url
+        title: URL
         type: url
       - widget: string
-        title: Email
+        title: email
         type: email
       - widget: string-i18n
-        title: Name
+        title: name
         rule: alphanum-space
   - preset: licenses
   - widget: string-i18n
-    title: RepositoryUrl
+    title: repositoryUrl
     type: url
-  - widget: group
-    title: RelatedCode
-    required: false
-    fields:
-      - widget: string-i18n
-        title: Url
-        type: url
-      - widget: string-i18n
-        title: Name
-        rule: alphanum-space
+  - preset: relatedCode
   - preset: tags
   - preset: status
   - widget: string
-    title: VersionProject
+    title: version
     required: false
   - widget: string
-    title: Vcs
+    title: vcs
     required: false
     rule: alphanum-space
+  - preset: empty
