--- a/_data/code/federal/eccc.yml
+++ b/_data/code/federal/eccc.yml
@@ -1,30 +1,28 @@
 ---
-schemaVersion: "1.0"
+schemaVersion: '1.0'
 adminCode: eccc
 releases:
-  -
-    contact:
+  - contact:
       email: metro-users@framalistes.org
     date:
-      created: 2006-08-28
-      metadataLastUpdated: 2019-01-31
+      created: '2006-08-28'
+      metadataLastUpdated: '2019-01-31'
     description:
-      en: "The Model of the Environment and Temperature of Roads (METRo) is a road forecast software."
-      fr: "Le Modèle de l'Environnement et de la Température de la Route (METRo) est un logiciel de prévision de la température de la route."
+      en: The Model of the Environment and Temperature of Roads (METRo) is a road forecast software.
+      fr: Le Modèle de l'Environnement et de la Température de la Route (METRo) est un logiciel de prévision de la température de la route.
     languages:
       - Python
     name:
       en: METRo
       fr: METRo
     licenses:
-      -
-        URL:
-          en: "https://framagit.org/metroprojects/metro/blob/master/LICENSE"
-          fr: "https://framagit.org/metroprojects/metro/blob/master/LICENSE"
+      - URL:
+          en: https://framagit.org/metroprojects/metro/blob/master/LICENSE
+          fr: https://framagit.org/metroprojects/metro/blob/master/LICENSE
         spdxID: GPL-2.0
     repositoryURL:
-      en: "https://framagit.org/metroprojects/metro"
-      fr: "https://framagit.org/metroprojects/metro"
+      en: https://framagit.org/metroprojects/metro
+      fr: https://framagit.org/metroprojects/metro
     tags:
       en:
         - Environment
