--- a/_data/code/federal/esdc-edsc.yml
+++ b/_data/code/federal/esdc-edsc.yml
@@ -1,56 +1,55 @@
 ---
-schemaVersion: "1.0"
+schemaVersion: '1.0'
 adminCode: esdc-edsc
 releases:
-  -
-    contact:
-      email: "calvin.rodo@hrsdc-rhdcc.gc.ca"
+  - contact:
+      email: calvin.rodo@hrsdc-rhdcc.gc.ca
     date:
-      created: 2019-02-13
-      metadataLastUpdated: 2019-02-21
+      created: '2019-02-13'
+      metadataLastUpdated: '2019-02-21'
     description:
-      en: "A dashboard to show expose metrics on software projects at ESDC"
-      fr: "Un tableau de bord pour afficher les métriques d'exposition sur les projets logiciels d'EDSC"
+      en: A dashboard to show expose metrics on software projects at ESDC
+      fr: Un tableau de bord pour afficher les métriques d'exposition sur les projets logiciels d'EDSC
     name:
-      en: "AppHub"
-      fr: "HubApp"
+      en: AppHub
+      fr: HubApp
     licenses:
       -
         URL:
-          en: "https://github.com/esdc-devx/AppHub/blob/master/LICENSE"
-          fr: "https://github.com/esdc-devx/AppHub/blob/master/LICENSE"
+          en: https://github.com/esdc-devx/AppHub/blob/master/LICENSE
+          fr: https://github.com/esdc-devx/AppHub/blob/master/LICENSE
         spdxID: MIT
     repositoryURL:
-      en: "https://github.com/esdc-devx/AppHub"
-      fr: "https://github.com/esdc-devx/AppHub"
+      en: https://github.com/esdc-devx/AppHub
+      fr: https://github.com/esdc-devx/AppHub
     tags:
       en:
-        - "Dashboard"
+        - Dashboard
       fr:
-        - "Tableau de bord"
-  -
-    contact:
-      email: "calvin.rodo@hrsdc-rhdcc.gc.ca"
+        - Tableau de bord
+
+  - contact:
+      email: calvin.rodo@hrsdc-rhdcc.gc.ca
     date:
-      created: 2019-02-13
-      metadataLastUpdated: 2019-02-21
+      created: '2019-02-13'
+      metadataLastUpdated: '2019-02-21'
     description:
-      en: "A .Net test app for the Code Coverage reporting dashboard"
-      fr: "Une application de test .Net pour le tableau de bord de rapports de couverture de code"
+      en: A .Net test app for the Code Coverage reporting dashboard
+      fr: Une application de test .Net pour le tableau de bord de rapports de couverture de code
     name:
-      en: ".Net Code Coverage Demo"
-      fr: "Démo de couverture de code .Net"
+      en: .Net Code Coverage Demo
+      fr: Démo de couverture de code .Net
     licenses:
       -
         URL:
-          en: "https://github.com/esdc-devx/DotNetCCDemo/blob/master/LICENSE"
-          fr: "https://github.com/esdc-devx/DotNetCCDemo/blob/master/LICENSE"
+          en: https://github.com/esdc-devx/DotNetCCDemo/blob/master/LICENSE
+          fr: https://github.com/esdc-devx/DotNetCCDemo/blob/master/LICENSE
         spdxID: MIT
     repositoryURL:
-      en: "https://github.com/esdc-devx/DotNetCCDemo"
-      fr: "https://github.com/esdc-devx/DotNetCCDemo"
+      en: https://github.com/esdc-devx/DotNetCCDemo
+      fr: https://github.com/esdc-devx/DotNetCCDemo
     tags:
       en:
-        - "Demo"
+        - Demo
       fr:
-        - "Demo"
+        - Demo
