--- a/_data/code/federal/nrc-cnrc.yml
+++ b/_data/code/federal/nrc-cnrc.yml
@@ -1,30 +1,28 @@
 ---
-schemaVersion: "1.0"
+schemaVersion: '1.0'
 adminCode: nrc-cnrc
 releases:
-  -
-    contact:
+  - contact:
       email: Frederic.Tessier@nrc-cnrc.gc.ca
     date:
-      created: 2012-11-25
-      metadataLastUpdated: 2019-01-31
+      created: '2012-11-25'
+      metadataLastUpdated: '2019-01-31'
     description:
-      en: "Toolkit to perform Monte Carlo simulation of ionizing radiation transport through matter"
-      fr: "Boîte à outils pour effectuer une simulation de Monte Carlo du transport du rayonnement ionisant à travers la matière"
+      en: Toolkit to perform Monte Carlo simulation of ionizing radiation transport through matter
+      fr: Boîte à outils pour effectuer une simulation de Monte Carlo du transport du rayonnement ionisant à travers la matière
     languages:
       - C++
     name:
       en: EGSnrc
       fr: EGSnrc
     licenses:
-      -
-        URL:
-          en: "https://github.com/nrc-cnrc/EGSnrc/blob/master/LICENCE"
-          fr: "https://github.com/nrc-cnrc/EGSnrc/blob/master/LICENCE"
+      - URL:
+          en: https://github.com/nrc-cnrc/EGSnrc/blob/master/LICENCE
+          fr: https://github.com/nrc-cnrc/EGSnrc/blob/master/LICENCE
         spdxID: AGPL-3.0
     repositoryURL:
-      en: "https://github.com/nrc-cnrc/EGSnrc"
-      fr: "https://github.com/nrc-cnrc/EGSnrc"
+      en: https://github.com/nrc-cnrc/EGSnrc
+      fr: https://github.com/nrc-cnrc/EGSnrc
     tags:
       en:
         - Monte Carlo simulation
