--- a/_data/code/federal/tc.yml
+++ b/_data/code/federal/tc.yml
@@ -1,16 +1,15 @@
 ---
-schemaVersion: "1.0"
+schemaVersion: '1.0'
 adminCode: tc
 releases:
-  -
-    contact:
+  - contact:
       email: thomas.gohard@tc.gc.ca
     date:
-      created: 2018-10-21
-      metadataLastUpdated: 2019-01-18
+      created: '2018-10-21'
+      metadataLastUpdated: '2019-01-18'
     description:
-      en: "Vehicle safety recalls Amazon Alexa Skill."
-      fr: "Skill Amazon Alexa pour les rappels de sécurité pour les véhicules."
+      en: Vehicle safety recalls Amazon Alexa Skill.
+      fr: Skill Amazon Alexa pour les rappels de sécurité pour les véhicules.
     languages:
       - JavaScript
     name:
@@ -19,12 +18,12 @@ releases:
     licenses:
       -
         URL:
-          en: "https://github.com/tc-ca/alexa-gc-recalls/blob/master/LICENSE"
-          fr: "https://github.com/tc-ca/alexa-gc-recalls/blob/master/LICENSE"
+          en: https://github.com/tc-ca/alexa-gc-recalls/blob/master/LICENSE
+          fr: https://github.com/tc-ca/alexa-gc-recalls/blob/master/LICENSE
         spdxID: MIT
     repositoryURL:
-      en: "https://github.com/tc-ca/alexa-gc-recalls"
-      fr: "https://github.com/tc-ca/alexa-gc-recalls"
+      en: https://github.com/tc-ca/alexa-gc-recalls
+      fr: https://github.com/tc-ca/alexa-gc-recalls
     tags:
       en:
         - Safety
@@ -37,16 +36,16 @@ releases:
         - Véhicules
         - Alexa
     vcs: git
-  -
-    contact:
+
+  - contact:
       email: Heather.MacKeen@tc.gc.ca
-      name: "Heather MacKeen"
+      name: Heather MacKeen
     date:
-      created: 2018-10-14
-      metadataLastUpdated: 2018-10-29
+      created: '2018-10-14'
+      metadataLastUpdated: '2018-10-29'
     description:
-      en: "The Reference Centre is .net WPF application that was designed for Transport Canada Inspectors to quickly retrieve documents stored on a network drive that was setup with Windows Sync (Always Available Offline)."
-      fr: "Le Centre de référence est une application WPF .net conçue pour permettre aux inspecteurs de Transports Canada de récupérer rapidement les documents stockés sur un lecteur réseau configuré avec Windows Sync."
+      en: The Reference Centre is .net WPF application that was designed for Transport Canada Inspectors to quickly retrieve documents stored on a network drive that was setup with Windows Sync (Always Available Offline).
+      fr: Le Centre de référence est une application WPF .net conçue pour permettre aux inspecteurs de Transports Canada de récupérer rapidement les documents stockés sur un lecteur réseau configuré avec Windows Sync.
     languages:
       - C#
     name:
@@ -55,12 +54,12 @@ releases:
     licenses:
       -
         URL:
-          en: "https://github.com/tc-ca/Reference-Centre/blob/master/LICENSE"
-          fr: "https://github.com/tc-ca/Reference-Centre/blob/master/LICENSE"
+          en: https://github.com/tc-ca/Reference-Centre/blob/master/LICENSE
+          fr: https://github.com/tc-ca/Reference-Centre/blob/master/LICENSE
         spdxID: MIT
     repositoryURL:
-      en: "https://github.com/tc-ca/Reference-Centre"
-      fr: "https://github.com/tc-ca/Reference-Centre"
+      en: https://github.com/tc-ca/Reference-Centre
+      fr: https://github.com/tc-ca/Reference-Centre
     tags:
       en:
         - Files
