--- a/_data/code/provincial/bc.yml
+++ b/_data/code/provincial/bc.yml
@@ -1,151 +1,143 @@
---- 
-schemaVersion: "1.0"
+---
+schemaVersion: '1.0'
 adminCode: bc
-releases: 
-  - 
-    contact: 
-      URL: 
+releases:
+  - contact:
+      URL:
         en: https://github.com/BCDevExchange/devex/issues
         fr: https://github.com/BCDevExchange/devex/issues
       email: bcdevexchange@gov.bc.ca
-    date: 
-      created: 2016-10-23
-      metadataLastUpdated: 2019-01-29
-    description: 
-      en: "B.C. Developer Exchange Application"
-      fr: "Application Échange de développeurs C.-B."
-    languages: 
+    date:
+      created: '2016-10-23'
+      metadataLastUpdated: '2019-01-29'
+    description:
+      en: B.C. Developer Exchange Application
+      fr: Application Échange de développeurs C.-B.
+    languages:
       - Python
-    name: 
+    name:
       en: Devex
       fr: Devex
-    licenses: 
-      - 
-        URL: 
-          en: "https://github.com/BCDevExchange/devex/blob/develop/LICENSE"
-          fr: "https://github.com/BCDevExchange/devex/blob/develop/LICENSE"
-        spdxID: "Apache-2.0"
-    repositoryURL: 
-      en: "https://github.com/BCDevExchange/devex"
-      fr: "https://github.com/BCDevExchange/devex"
+    licenses:
+      - URL:
+          en: https://github.com/BCDevExchange/devex/blob/develop/LICENSE
+          fr: https://github.com/BCDevExchange/devex/blob/develop/LICENSE
+        spdxID: Apache-2.0
+    repositoryURL:
+      en: https://github.com/BCDevExchange/devex
+      fr: https://github.com/BCDevExchange/devex
     status: Production
-    tags: 
-      en: 
-        - "Developer Exchange"
-      fr: 
-        - "Échange de développeurs"
+    tags:
+      en:
+        - Developer Exchange
+      fr:
+        - Échange de développeurs
     vcs: git
 
-  - 
-    contact: 
-      URL: 
+  - contact:
+      URL:
         en: https://github.com/bcgov/gwells/issues
         fr: https://github.com/bcgov/gwells/issues
       email: todd.wilson@gov.bc.ca
-    date: 
-      created: 2015-04-29
-      metadataLastUpdated: 2019-05-10
-    description: 
-      en: "Groundwater Wells and Aquifers application for the Ministry of Environment."
-      fr: "Application de puits d'eau souterraine et d'aquifères pour le ministère de l'environnement."
+    date:
+      created: '2015-04-29'
+      metadataLastUpdated: '2019-05-10'
+    description:
+      en: Groundwater Wells and Aquifers application for the Ministry of Environment.
+      fr: Application de puits d'eau souterraine et d'aquifères pour le ministère de l'environnement.
     homepageURL:
-      en: "https://apps.nrs.gov.bc.ca/gwells/"
-      fr: "https://apps.nrs.gov.bc.ca/gwells/"
-    languages: 
+      en: https://apps.nrs.gov.bc.ca/gwells/
+      fr: https://apps.nrs.gov.bc.ca/gwells/
+    languages:
       - JavaScript
-    name: 
+    name:
       en: gwells
       fr: gwells
-    licenses: 
-      - 
-        URL: 
-          en: "https://github.com/bcgov/gwells/blob/release/LICENSE"
-          fr: "https://github.com/bcgov/gwells/blob/release/LICENSE"
-        spdxID: "Apache-2.0"
-    repositoryURL: 
-      en: "https://github.com/bcgov/gwells"
-      fr: "https://github.com/bcgov/gwells"
+    licenses:
+      - URL:
+          en: https://github.com/bcgov/gwells/blob/release/LICENSE
+          fr: https://github.com/bcgov/gwells/blob/release/LICENSE
+        spdxID: Apache-2.0
+    repositoryURL:
+      en: https://github.com/bcgov/gwells
+      fr: https://github.com/bcgov/gwells
     status: Production
-    tags: 
-      en: 
-        - "groundwater-data"
-      fr: 
-        - "données-eaux souterraines"
+    tags:
+      en:
+        - groundwater-data
+      fr:
+        - données-eaux souterraines
     vcs: git
-    version: "1.54.0"
+    version: 1.54.0
 
-  - 
-    contact: 
-      URL: 
+  - contact:
+      URL:
         en: https://github.com/bcgov/devhub-app-web/issues
         fr: https://github.com/bcgov/devhub-app-web/issues
       email: todd.wilson@gov.bc.ca
-    date: 
-      created: 2017-10-20
-      metadataLastUpdated: 2019-05-10
-    description: 
-      en: "Web application for the DevHub."
-      fr: "Application Web pour le DevHub."
+    date:
+      created: '2017-10-20'
+      metadataLastUpdated: '2019-05-10'
+    description:
+      en: Web application for the DevHub.
+      fr: Application Web pour le DevHub.
     homepageURL:
-      en: "https://developer.gov.bc.ca/"
-      fr: "https://developer.gov.bc.ca/"
-    languages: 
+      en: https://developer.gov.bc.ca/
+      fr: https://developer.gov.bc.ca/
+    languages:
       - JavaScript
-    name: 
+    name:
       en: devhub-app-web
       fr: devhub-app-web
-    licenses: 
-      - 
-        URL: 
-          en: "https://github.com/bcgov/devhub-app-web/blob/master/LICENSE"
-          fr: "https://github.com/bcgov/devhub-app-web/blob/master/LICENSE"
-        spdxID: "Apache-2.0"
-    repositoryURL: 
-      en: "https://github.com/bcgov/devhub-app-web"
-      fr: "https://github.com/bcgov/devhub-app-web"
+    licenses:
+      - URL:
+          en: https://github.com/bcgov/devhub-app-web/blob/master/LICENSE
+          fr: https://github.com/bcgov/devhub-app-web/blob/master/LICENSE
+        spdxID: Apache-2.0
+    repositoryURL:
+      en: https://github.com/bcgov/devhub-app-web
+      fr: https://github.com/bcgov/devhub-app-web
     status: Development
-    tags: 
-      en: 
-        - "DevHub App Web"
-      fr: 
-        - "DevHub App Web"
+    tags:
+      en:
+        - DevHub App Web
+      fr:
+        - DevHub App Web
     vcs: git
-    version: "2.7.0"    
+    version: 2.7.0
 
-  - 
-    contact: 
-      URL: 
+  - contact:
+      URL:
         en: https://github.com/bcgov/ckanext-bcgov/issues
         fr: https://github.com/bcgov/ckanext-bcgov/issues
       email: NRSApplications@gov.bc.ca
-    date: 
-      created: 2014-03-20
-      metadataLastUpdated: 2019-05-10
-    description: 
-      en: "BC Data Catalogue source code."
-      fr: "Code source du catalogue de données BC."
+    date:
+      created: '2014-03-20'
+      metadataLastUpdated: '2019-05-10'
+    description:
+      en: BC Data Catalogue source code.
+      fr: Code source du catalogue de données BC.
     homepageURL:
-      en: "http://catalogue.data.gov.bc.ca"
-      fr: "http://catalogue.data.gov.bc.ca"
-    languages: 
-      - Python 
-    name: 
+      en: http://catalogue.data.gov.bc.ca
+      fr: http://catalogue.data.gov.bc.ca
+    languages:
+      - Python
+    name:
       en: ckanext-bcgov
       fr: ckanext-bcgov
-    licenses: 
-      - 
-        URL: 
-          en: "https://github.com/bcgov/ckanext-bcgov/blob/dev/license"
-          fr: "https://github.com/bcgov/ckanext-bcgov/blob/dev/license"
-        spdxID: "AGPL-3.0"
-    repositoryURL: 
-      en: "https://github.com/bcgov/ckanext-bcgov"
-      fr: "https://github.com/bcgov/ckanext-bcgov"
+    licenses:
+      - URL:
+          en: https://github.com/bcgov/ckanext-bcgov/blob/dev/license
+          fr: https://github.com/bcgov/ckanext-bcgov/blob/dev/license
+        spdxID: AGPL-3.0
+    repositoryURL:
+      en: https://github.com/bcgov/ckanext-bcgov
+      fr: https://github.com/bcgov/ckanext-bcgov
     status: Production
-    tags: 
-      en: 
-        - "Data Catalogue"
-      fr: 
-        - "Catalogue de données"
+    tags:
+      en:
+        - Data Catalogue
+      fr:
+        - Catalogue de données
     vcs: git
-    version: "1.7.18"
+    version: 1.7.18
